# bot

./: CMakeLists.txt
src/: CMakeLists.txt  database.cpp  database.h  main.cpp  skipping_work.cpp  skipping_work.h
tests/: CMakeLists.txt  database_tests.cpp  parse_tests.cpp
